# ainewsletter

./: .gitignore  2024-03-04.md  agents.py  crew_ai_notes.md  file_io.py  main.py  pyproject.toml  tasks.py
newsletterproject/: db.sqlite3  manage.py
newsletterproject/authapp/: admin.py  models.py  services.py  urls.py  views.py
newsletterproject/authapp/components/: subscription_manager.py
newsletterproject/authapp/migrations/: 0001_initial.py  0002_subscription.py  0003_rename_user_subscription_email_and_more.py
newsletterproject/authapp/templates/unicorn/: subscription_manager.html
newsletterproject/blogapp/: admin.py  models.py  urls.py  views.py
newsletterproject/blogapp/blogs/: adobe-finds-ai-hype-is-a-two-edged-sword.md  china-unveils-economic-strategy-to-boost-ai-sector.md  european-lawmakers-approve-landmark-ai-legislation.md  goldman-sachs-highlights-stocks-to-benefit-from-maturing-ai-boom.md  meet-dall-e-the-ai-that-draws-anything-at-your-command.md  regulation-of-bias-in-ai-a-growing-concern.md
newsletterproject/blogapp/components/: pagination.py  search_blog.py
newsletterproject/blogapp/migrations/: 0001_initial.py  0002_rename_intro_blogpost_subtitle_blogpost_aurthor.py  0003_rename_aurthor_blogpost_author.py
newsletterproject/blogapp/templatetags/: blog_tags.py
newsletterproject/newsletterproject/: asgi.py  settings.py  urls.py  wsgi.py
newsletterproject/theme/static/js/: themeSelector.js
newsletterproject/theme/static_src/: package-lock.json  tailwind.config.js
newsletterproject/theme/templates/: base.html
tools/: search_tools.py
(+18 files in other folders)
